# agent-memory-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent-memory/: SKILL.md
agent-memory/agents/: openai.yaml
agent-memory/references/: adapters.md  adaptive-integration.md  existing-agent-integration.md  memory-model.md  migration-packet.md  topic-management.md
agent-memory/scripts/: memory_packet.py
agent_memory/: __init__.py  cli.py  core.py  schema.py
agent_memory/adapters/: __init__.py  agent.py  chat.py  codex.py  multi_agent.py
docs/: adapter-contract.md  adaptive-integration.md  agent-adapter.md  architecture.md  chat-adapter.md  codex-adapter.md  demo-agent-run.md  demo-chat-memory.md  demo-multi-agent.md  demo-topic-interruption.md  evaluation.md  existing-agent-integration.md  handoff.md  json-schema.md  memory-briefing.md  memory-candidates.md  memory-compaction.md  memory-doctor.md  memory-selection.md  memory-updates.md  multi-agent-adapter.md  opening-plans.md  portable-bundles.md  privacy-and-safety.md  problem-map.md  release.md  research-pain-points.md
examples/agent-run-demo/: agent-run-note.md  memory-briefing.md  migration-packet.md  state.json
examples/chat-memory-demo/: chat-memory-note.md  (+3 more)
schemas/: state.schema.json
scripts/: demo_memory_flow.py  evaluate_memory_scenarios.py  install_skill.py  validate_release.py
tests/: test_memory_packet.py
(+15 files in other folders)
